fix mobile version color padding and gap for h1, sections and buttons div

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -238,6 +238,10 @@
     .about-us {
         padding: 5rem 5.333% 3.125rem;
         @include e.flex(1.5625rem, column, unset);
+
+        .text {
+            @include e.flex(1.25rem, column, unset);
+        }
     }
 
     .img-wrapper {
@@ -245,7 +249,7 @@
     }
 
     .contact {
-        padding: 0 4% 0;
+        padding: 0 5% 0;
 
         img {
             border-radius: 1.25rem;
@@ -253,8 +257,8 @@
         }
 
         .texts {
-            margin: 1.875rem 0 0;
-            padding: 0 0 3.125rem;
+            margin: 2.5rem 0 0;
+            padding: 0 0 5rem;
             @include e.flex(1.5625rem, column, unset);
 
             img {
@@ -281,7 +285,7 @@
     }
 
     .menu-overview {
-        padding: 3.125rem 4% 0;
+        padding: 3.125rem 5% 0;
 
         h2,
         p {
@@ -294,7 +298,7 @@
         }
 
         .buttons {
-            margin: 2.5rem 0 5rem;
+            margin: 3.75rem auto 5rem;
         }
     }
 
@@ -355,7 +359,7 @@
     .extra-ad {
         background-color: e.$prim-col;
         color: #fff;
-        padding: 5.625rem 4% 1.875rem;
+        padding: 5.625rem 5% 1.875rem;
 
         hr {
             border: 1px solid #fff;
@@ -367,12 +371,15 @@
             margin: 3.125rem 0 1.5625rem;
         }
 
-        p {
+        p,
+        h1 {
             color: #fff;
         }
 
         .buttons {
             margin: 3.125rem 0 0;
+            width: 100%;
+            gap: 1.25rem;
         }
 
         .btn-primary {
@@ -413,7 +420,7 @@
     }
 
     footer {
-        padding: 1.875rem 4% 0;
+        padding: 1.875rem 5% 0;
     }
 
     .promotion {
